# midl-website-2023

./: .gitignore  .gitmodules  MIDL2023.bib  Makefile  Pipfile  README.md  csv2json.py  gen_bib_proceedings.py  gen_scientific_program.py  gen_virtual_program.py  generate_papers.py  melba.json  netlify.toml  paper.py  papers.json  patch.json  posterBoardNumbersMon.csv  posterBoardNumbersTue.csv  posterBoardNumbersWeds.csv  pyproject.toml  requirements.txt  website.yaml
layouts/: default.html
pages/: author-instructions.md  awards.md  call-for-papers.md  camera-ready.md  code-of-conduct.md  dates.md  doctoral.md  faq.md  index.md  job-board.md  keynotes.md  local_organizing.md  monai-workshop.md  monai.md  nvidia-workshop.md  organization.md  presenter-instructions.md  program.md  program.txt  registration.md  reviewer-guidelines.md  scientific-program.md  sponsors.md  sponsorship-packages.md  venue.md  virtual_event.md  virtual_event.txt  virtual_participation.md  workshop_agenda.md
pages/papers/: M004.md  M018.md  O006.md  O007.md  O021.md  O024.md  O026.md  O029.md  O031.md  O037.md  O039.md  O047.md  O048.md  O053.md  O058.md  O063.md  O069.md  O077.md  O088.md  O100.md  O115.md  O125.md  O130.md  O134.md  O139.md  O140.md  O159.md  O160.md  O177.md  O179.md  O190.md  O191.md  O198.md  O216.md  O218.md  O221.md  O236.md  P002.md  P003.md  P008.md  (+175 more)
placeholder/: 404.md  index.md
