[tool.poetry]
name = "midl-website-XXXX"
version = "1.0.0"
description = "Website of the XXXX edition of the MIDL conference series"
authors = ["Nikolas Lessmann <773597+nlessmann@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "~3.7"
midl-website-builder = {git = "https://github.com/MIDL-Conference/midl-website-builder.git", rev = "1.13"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
